styling: - app-header - app-footer - main - media for responsive

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,9 @@
 @import '/scss/base';
 @import '/scss/variables';
 @import '/scss/layout';
+@import '/scss/media';
+
+//@import '/scss/app-header';
+//@import '/scss/app-footer';
+//@import '/scss/main';
+//@import '/scss/base-currency';
