--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
 @import '/scss/layout';
 @import '/scss/media';
 
-//@import '/scss/app-header';
-//@import '/scss/app-footer';
-//@import '/scss/main';
-//@import '/scss/base-currency';
+@import '/scss/app-header';
+@import '/scss/app-footer';
+@import '/scss/main';
+@import '/scss/base-currency';
