connect API and get rates

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,6 +1,7 @@
 #root {
   background: linear-gradient(180deg, #fff, #ccc);
 }
-.main {
-  padding: 1em;
+#main {
+  padding: 1.618em;
+  min-height: 100vh;
 }
