- separate Currencies from App.js - added Currency.js and its test - added Currencies.js and its test - added helper.js and its test - BaseCurrency.js quick fix
- fixing styling, 'media' should be put on the last line to overwrite

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,9 +2,13 @@
 @import '/scss/base';
 @import '/scss/variables';
 @import '/scss/layout';
-@import '/scss/media';
+
+@import '/scss/animation';
 
 @import '/scss/app-header';
 @import '/scss/app-footer';
 @import '/scss/main';
 @import '/scss/base-currency';
+@import '/scss/currency';
+
+@import '/scss/media';
