wip add currency

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,5 +10,6 @@
 @import '/scss/main';
 @import '/scss/base-currency';
 @import '/scss/currency';
+@import '/scss/add-currency';
 
 @import '/scss/media';
