- adding remove currency - better currency selection, by showing only unselected - updated readme.md

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,5 +11,6 @@
 @import '/scss/base-currency';
 @import '/scss/currency';
 @import '/scss/add-currency';
+@import "/scss/loading";
 
 @import '/scss/media';
