--- a/src/scss/_animation.scss
+++ b/src/scss/_animation.scss
@@ -21,3 +21,12 @@
     border-color: #777;
   }
 }
+
+@keyframes move {
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
