--- a/src/scss/_currency.scss
+++ b/src/scss/_currency.scss
@@ -2,11 +2,55 @@
   list-style: none;
   padding: 0;
 }
+
 .currency-item {
+  display: grid;
+  grid-gap: .618em;
+  grid-template-areas: "code value value value remove" "title title title title ." "rate rate rate rate .";
+  > .title {
+    grid-area: title;
+  }
+  > .code {
+    grid-area: code;
+  }
+  > .value {
+    grid-area: value;
+  }
+  > .rate {
+    grid-area: rate;
+  }
+  > .remove {
+    grid-area: remove;
+  }
+
   animation: added .6s, colormark 3s forwards;
   border: 2px solid #777;
   margin: 1em 0;
   box-shadow: .618em .618em 0 rgba(0, 0, 0, .1);
   padding: .618em;
   background-color: #fff;
+  > .value {
+    text-align: right;
+  }
+  > .value, > .code {
+    font-size: 1.618em;
+    font-weight: 800;
+  }
+  > .remove {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    font-weight: 800;
+    color: #ccc;
+    &:hover {
+      background-color: tomato;
+      color: white;
+      text-decoration: none;
+    }
+  }
 }
